2008-11-04  kitone  <kitone@gna.org>

	* autogen.sh:
	Add AC_PROG_LIBTOOL check.

	* configure.in:
	Add missing file plugins/Makefile.

2008-11-03  kitone  <kitone@gna.org>

	* configure.in:
	Fix: removed PACKAGE_SHARE_DIR.

	* share/menubar.xml:
	Update with new system.

	* src/gui/MenuBar.cc:
	Add extension menu (Exts).

	* plugins/actions/about/About.cc:
	* plugins/actions/adjusttime/AdjustTime.cc:
	* plugins/actions/applytranslation/ApplyTranslation.cc:
	* plugins/actions/changeframerate/ChangeFramerate.cc:
	* plugins/actions/combinesubtitles/CombineSubtitles.cc:
	* plugins/actions/command/Command.cc:
	* plugins/actions/configurekeyboardshortcuts/ConfigureKeyboardShortcuts.cc:
	* plugins/actions/dialoguize/Dialoguize.cc:
	* plugins/actions/documentmanagement/DocumentManagement.cc:
	* plugins/actions/duplicatesubtitle/DuplicateSubtitle.cc:
	* plugins/actions/editcell/EditCell.cc:
	* plugins/actions/errorchecking/ErrorCheckingPlugin.cc:
	* plugins/actions/extendlength/ExtendLength.cc:
	* plugins/actions/externalvideoplayer/ExternalVideoPlayer.cc:
	* plugins/actions/findandreplace/FindAndReplace.cc:
	* plugins/actions/insertsubtitle/InsertSubtitle.cc:
	* plugins/actions/italicize/Italicize.cc:
	* plugins/actions/joindocument/JoinDocument.cc:
	* plugins/actions/moveafterprecedingsubtitle/MoveAfterPrecedingSubtitle.cc:
	* plugins/actions/movesubtitles/MoveSubtitles.cc:
	* plugins/actions/plaintext/PlainText.cc:
	* plugins/actions/preferences/PreferencesPlugin.cc:
	* plugins/actions/removesubtitle/RemoveSubtitle.cc:
	* plugins/actions/reversetextandtranslation/ReverseTextAndTranslation.cc:
	* plugins/actions/scalesubtitles/ScaleSubtitles.cc:
	* plugins/actions/selection/Selection.cc:
	* plugins/actions/spellchecking/SpellChecking.cc:
	* plugins/actions/splitdocument/SplitDocument.cc:
	* plugins/actions/splitsubtitle/SplitSubtitle.cc:
	* plugins/actions/styleeditor/StyleEditor.cc:
	* plugins/actions/timemodemanagement/TimeModeManagement.cc: