@@ -287,7 +287,7 @@ fi
 
 ## SUBTITLEEDITOR LIBS FLAGS
 SUBTITLEEDITOR_LIBS="$GTKMM_LIBS" ## ${LIBGLADEMM_LIBS} ${GSTREAMER_LIBS} ${INTLLIBS} ${LIBXML_LIBS} ${ENCHANT_LIBS} ${CPPUNIT_LIBS}"
-SUBTITLEEDITOR_CFLAGS="$GTKMM_CFLAGS ${LIBGLADEMM_CFLAGS} ${GSTREAMER_CFLAGS} ${INTLCFLAGS} ${LIBXML_CFLAGS} ${ENCHANT_CFLAGS} ${CPPUNIT_CFLAGS}"
+SUBTITLEEDITOR_CFLAGS="$GTKMM_CFLAGS ${LIBGLADEMM_CFLAGS} ${INTLCFLAGS} ${LIBXML_CFLAGS}"
 
 AC_SUBST(SUBTITLEEDITOR_LIBS)
 AC_SUBST(SUBTITLEEDITOR_CFLAGS)
