@@ -1,5 +1,15 @@
 2008-11-04  kitone  <kitone@gna.org>
 
+	* configure.in:
+	* plugins/actions/spellchecking/Makefile.am:
+	* plugins/actions/wavefrommanagement/Makefile.am:
+	* src/Makefile.am:
+	* src/we/WaveformRenderer.cc:
+	* src/we/WaveformRenderer.h:
+	Clean dependence in the Makefile.
+
+2008-11-04  kitone  <kitone@gna.org>
+
 	* autogen.sh:
 	Add AC_PROG_LIBTOOL check.
 
